--- a/src/cookies.html
+++ b/src/cookies.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<!-- Martex - Software, App, SaaS & Startup Landing Pages Pack design by DSAThemes (http://www.dsathemes.com) -->
+<!-- ProCraftLabs - Software, App, SaaS & Startup Landing Pages Pack design by DSAThemes (http://www.dsathemes.com) -->
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
@@ -14,12 +14,12 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="author" content="DSAThemes">	
-		<meta name="description" content="Martex - Software, App, SaaS & Startup Landing Pages Pack">
+		<meta name="description" content="ProCraftLabs - Software, App, SaaS & Startup Landing Pages Pack">
 		<meta name="keywords" content="Responsive, HTML5, DSAThemes, Landing, Software, Mobile App, SaaS, Startup, Creative, Digital Product">	
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 				
   		<!-- SITE TITLE -->
-		<title>Martex - Software, App, SaaS & Startup Landing Pages Pack</title>
+		<title>ProCraftLabs - Software, App, SaaS & Startup Landing Pages Pack</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -207,7 +207,7 @@
 								<!-- Text -->
 								<p>Sagittis congue augue egestas integer velna purus purus magna nec suscipit and egestas
 								   magna aliquam ipsum vitae purus justo lacus ligula ipsum primis cubilia donec undo augue 
-								   luctus vitae egestas a molestie donec <a href="#" class="color--theme">https://martex.com/software</a> undo quisque fusce cursus neque blandit fusce an aliquam nulla lacinia justo molestie 
+								   luctus vitae egestas a molestie donec <a href="#" class="color--theme">https://ProCraftLabs.com/software</a> undo quisque fusce cursus neque blandit fusce an aliquam nulla lacinia justo molestie 
 								   blandit justo diam aliquet tortor non molestie sagittis lacinia
 								</p>
 
@@ -436,7 +436,7 @@
 
 								<!-- Text -->  
 								<p>If you have any questions or suggestions about this Terms of Service, do not hesitate to 
-									contact us at <a href="mailto:yourdomain@mail.com" class="color--theme">hello@yourdomain.com</a>
+									contact us at <a href="mailto:yourdomain@mail.com" class="color--theme">info@procraftlabs.com</a>
 								</p>
 
 							</div>	<!-- END TEXT BLOCK -->	
