--- a/src/about.html
+++ b/src/about.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<!-- Martex - Software, App, SaaS & Startup Landing Pages Pack design by DSAThemes (http://www.dsathemes.com) -->
+<!-- ProCraftLabs - Software, App, SaaS & Startup Landing Pages Pack design by DSAThemes (http://www.dsathemes.com) -->
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
@@ -14,12 +14,12 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="author" content="DSAThemes">	
-		<meta name="description" content="Martex - Software, App, SaaS & Startup Landing Pages Pack">
+		<meta name="description" content="ProCraftLabs - Software, App, SaaS & Startup Landing Pages Pack">
 		<meta name="keywords" content="Responsive, HTML5, DSAThemes, Landing, Software, Mobile App, SaaS, Startup, Creative, Digital Product">	
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 				
   		<!-- SITE TITLE -->
-		<title>Martex - Software, App, SaaS & Startup Landing Pages Pack</title>
+		<title>ProCraftLabs - Software, App, SaaS & Startup Landing Pages Pack</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -456,7 +456,7 @@
 							<div class="txt-block left-column wow fadeInRight">
 
 								<!-- Section ID -->	
-						 		<span class="section-id">Co-founder at Martex</span>
+						 		<span class="section-id">Co-founder at ProCraftLabs</span>
 	
 								<!-- Title -->	
 								<h2 class="s-50 w-700">Henry Adams</h2>
@@ -1593,7 +1593,7 @@
 									<!-- Post Meta -->
 									<div class="blog-post-meta mt-20">
 										<ul class="post-meta-list ico-10">
-											<li><p class="p-sm w-500">By Martex Team</p></li>
+											<li><p class="p-sm w-500">By ProCraftLabs Team</p></li>
 											<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
 											<li><p class="p-sm">Apr 14, 2023</p></li>
 										</ul>
@@ -1622,7 +1622,7 @@
 
 									<!-- Post Link -->
 									<h6 class="s-20 w-700">
-										<a href="single-post.html">Cubilia laoreet augue egestas and Martex magna impedit</a>
+										<a href="single-post.html">Cubilia laoreet augue egestas and ProCraftLabs magna impedit</a>
 									</h6>
 
 									<!-- Text -->
@@ -1822,7 +1822,7 @@
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:yourdomain@mail.com">hello@yourdomain.com</a>
+									<a href="mailto:yourdomain@mail.com">info@procraftlabs.com</a>
 								</p>
 
 								<!-- Social Links -->	
@@ -1850,7 +1850,7 @@
 
 							<!-- FOOTER COPYRIGHT -->
 							<div class="col">
-								<div class="footer-copyright"><p class="p-sm">&copy; 2023 Martex. <span>All Rights Reserved</span></p></div>
+								<div class="footer-copyright"><p class="p-sm">&copy; 2023 ProCraftLabs. <span>All Rights Reserved</span></p></div>
 							</div>
 
 
