--- a/src/demo-16.html
+++ b/src/demo-16.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<!-- Martex - Software, App, SaaS & Startup Landing Pages Pack design by DSAThemes (http://www.dsathemes.com) -->
+<!-- ProCraftLabs - Software, App, SaaS & Startup Landing Pages Pack design by DSAThemes (http://www.dsathemes.com) -->
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
@@ -14,12 +14,12 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="author" content="DSAThemes">	
-		<meta name="description" content="Martex - Software, App, SaaS & Startup Landing Pages Pack">
+		<meta name="description" content="ProCraftLabs - Software, App, SaaS & Startup Landing Pages Pack">
 		<meta name="keywords" content="Responsive, HTML5, DSAThemes, Landing, Software, Mobile App, SaaS, Startup, Creative, Digital Product">	
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 				
   		<!-- SITE TITLE -->
-		<title>Martex - Software, App, SaaS & Startup Landing Pages Pack</title>
+		<title>ProCraftLabs - Software, App, SaaS & Startup Landing Pages Pack</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -130,7 +130,7 @@
 	        						<!-- DROPDOWN SUB MENU -->
 						          	<li aria-haspopup="true"><a href="#" class="h-link">About <span class="wsarrow"></span></a>
 	            						<ul class="sub-menu">
-	            							<li aria-haspopup="true"><a href="#lnk-1">Why Martex?</a></li>
+	            							<li aria-haspopup="true"><a href="#lnk-1">Why ProCraftLabs?</a></li>
 	            							<li aria-haspopup="true"><a href="#features-2">Best Solutions</a></li>
 	            							<li aria-haspopup="true"><a href="#lnk-2">Integrations</a></li>
 	            							<li aria-haspopup="true"><a href="#lnk-3">How It Works</a></li>
@@ -1432,7 +1432,7 @@
 					<div class="row justify-content-center">	
 						<div class="col-md-10 col-lg-9">
 							<div class="brands-title mb-50">
-								<h5 class="s-18">Martex is loved and trusted by thousands</h5>
+								<h5 class="s-18">ProCraftLabs is loved and trusted by thousands</h5>
 							</div>
 						</div>
 					</div>
@@ -1788,7 +1788,7 @@
 									<div class="banner-13-txt">
 
 										<!-- Title -->	
-										<h2 class="s-46 w-700">Getting started with Martex today!</h2>
+										<h2 class="s-46 w-700">Getting started with ProCraftLabs today!</h2>
 
 										<!-- Text -->
 										<p class="p-lg">Congue laoreet turpis neque auctor turpis vitae dolor a luctus 
@@ -1914,7 +1914,7 @@
 									<!-- Post Meta -->
 									<div class="blog-post-meta mt-20">
 										<ul class="post-meta-list ico-10">
-											<li><p class="p-sm w-500">By Martex Team</p></li>
+											<li><p class="p-sm w-500">By ProCraftLabs Team</p></li>
 											<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
 											<li><p class="p-sm">Apr 14, 2023</p></li>
 										</ul>
@@ -1943,7 +1943,7 @@
 
 									<!-- Post Link -->
 									<h6 class="s-20 w-700">
-										<a href="single-post.html">Cubilia laoreet augue egestas and Martex magna impedit</a>
+										<a href="single-post.html">Cubilia laoreet augue egestas and ProCraftLabs magna impedit</a>
 									</h6>
 
 									<!-- Text -->
@@ -2192,7 +2192,7 @@
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:yourdomain@mail.com">hello@yourdomain.com</a>
+									<a href="mailto:yourdomain@mail.com">info@procraftlabs.com</a>
 								</p>
 
 								<!-- Social Links -->	
@@ -2220,7 +2220,7 @@
 
 							<!-- FOOTER COPYRIGHT -->
 							<div class="col">
-								<div class="footer-copyright"><p class="p-sm">&copy; 2023 Martex. <span>All Rights Reserved</span></p></div>
+								<div class="footer-copyright"><p class="p-sm">&copy; 2023 ProCraftLabs. <span>All Rights Reserved</span></p></div>
 							</div>
 
 
