--- a/src/demo-21.html
+++ b/src/demo-21.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<!-- Martex - Software, App, SaaS & Startup Landing Pages Pack design by DSAThemes (http://www.dsathemes.com) -->
+<!-- ProCraftLabs - Software, App, SaaS & Startup Landing Pages Pack design by DSAThemes (http://www.dsathemes.com) -->
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
@@ -14,12 +14,12 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="author" content="DSAThemes">	
-		<meta name="description" content="Martex - Software, App, SaaS & Startup Landing Pages Pack">
+		<meta name="description" content="ProCraftLabs - Software, App, SaaS & Startup Landing Pages Pack">
 		<meta name="keywords" content="Responsive, HTML5, DSAThemes, Landing, Software, Mobile App, SaaS, Startup, Creative, Digital Product">	
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 				
   		<!-- SITE TITLE -->
-		<title>Martex - Software, App, SaaS & Startup Landing Pages Pack</title>
+		<title>ProCraftLabs - Software, App, SaaS & Startup Landing Pages Pack</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -130,7 +130,7 @@
 	        						<!-- DROPDOWN SUB MENU -->
 						          	<li aria-haspopup="true"><a href="#" class="h-link">About <span class="wsarrow"></span></a>
 	            						<ul class="sub-menu">
-	            							<li aria-haspopup="true"><a href="#lnk-1">Why Martex?</a></li>
+	            							<li aria-haspopup="true"><a href="#lnk-1">Why ProCraftLabs?</a></li>
 	            							<li aria-haspopup="true"><a href="#features-2">Best Solutions</a></li>
 	            							<li aria-haspopup="true"><a href="#features-5">How It Works</a></li>
 	            							<li aria-haspopup="true"><a href="#integrations-1">Integrations</a></li>
@@ -722,7 +722,7 @@
 					<div class="row justify-content-center">	
 						<div class="col-md-10 col-lg-9">
 							<div class="brands-title mb-50">
-								<h5 class="s-19 w-700">Over 100 companies sign up Martex every day!</h5>
+								<h5 class="s-19 w-700">Over 100 companies sign up ProCraftLabs every day!</h5>
 							</div>
 						</div>
 					</div>
@@ -2167,7 +2167,7 @@
 									<div class="question mb-35 wow fadeInUp">
 
 										<!-- Question -->
-										<h5 class="s-22 w-700"><span>1.</span> Getting started with Martex</h5>
+										<h5 class="s-22 w-700"><span>1.</span> Getting started with ProCraftLabs</h5>
 
 										<!-- Answer -->
 										<p class="color--grey">Etiam amet mauris suscipit in odio integer congue metus 
@@ -2232,7 +2232,7 @@
 									<div class="question mb-35 wow fadeInUp">
 
 										<!-- Question -->
-										<h5 class="s-22 w-700"><span>4.</span> How does Martex handle my privacy?</h5>
+										<h5 class="s-22 w-700"><span>4.</span> How does ProCraftLabs handle my privacy?</h5>
 
 										<!-- Answer -->
 										<p class="color--grey">Quaerat sodales sapien euismod blandit purus a purus 
@@ -2322,7 +2322,7 @@
 									<div class="banner-13-txt color--white">
 
 										<!-- Title -->	
-										<h2 class="s-46 w-700">Getting started with Martex today!</h2>
+										<h2 class="s-46 w-700">Getting started with ProCraftLabs today!</h2>
 
 										<!-- Text -->
 										<p class="p-lg">Congue laoreet turpis neque auctor turpis vitae dolor a luctus 
@@ -2577,7 +2577,7 @@
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:yourdomain@mail.com">hello@yourdomain.com</a>
+									<a href="mailto:yourdomain@mail.com">info@procraftlabs.com</a>
 								</p>
 
 								<!-- Social Links -->	
@@ -2605,7 +2605,7 @@
 
 							<!-- FOOTER COPYRIGHT -->
 							<div class="col">
-								<div class="footer-copyright"><p class="p-sm">&copy; 2023 Martex. <span>All Rights Reserved</span></p></div>
+								<div class="footer-copyright"><p class="p-sm">&copy; 2023 ProCraftLabs. <span>All Rights Reserved</span></p></div>
 							</div>
 
 
