--- a/src/demo-23.html
+++ b/src/demo-23.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<!-- Martex - Software, App, SaaS & Startup Landing Pages Pack design by DSAThemes (http://www.dsathemes.com) -->
+<!-- ProCraftLabs - Software, App, SaaS & Startup Landing Pages Pack design by DSAThemes (http://www.dsathemes.com) -->
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
@@ -14,12 +14,12 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="author" content="DSAThemes">	
-		<meta name="description" content="Martex - Software, App, SaaS & Startup Landing Pages Pack">
+		<meta name="description" content="ProCraftLabs - Software, App, SaaS & Startup Landing Pages Pack">
 		<meta name="keywords" content="Responsive, HTML5, DSAThemes, Landing, Software, Mobile App, SaaS, Startup, Creative, Digital Product">	
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 				
   		<!-- SITE TITLE -->
-		<title>Martex - Software, App, SaaS & Startup Landing Pages Pack</title>
+		<title>ProCraftLabs - Software, App, SaaS & Startup Landing Pages Pack</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -130,7 +130,7 @@
 	        						<!-- DROPDOWN SUB MENU -->
 						          	<li aria-haspopup="true"><a href="#" class="h-link">About <span class="wsarrow"></span></a>
 	            						<ul class="sub-menu">
-	            							<li aria-haspopup="true"><a href="#lnk-1">Why Martex?</a></li>
+	            							<li aria-haspopup="true"><a href="#lnk-1">Why ProCraftLabs?</a></li>
 	            							<li aria-haspopup="true"><a href="#features-12">Best Solutions</a></li>
 	            							<li aria-haspopup="true"><a href="#features-5">Integrations</a></li>
 	            							<li aria-haspopup="true"><a href="#lnk-2">How It Works</a></li>
@@ -2024,7 +2024,7 @@
 									<div class="banner-7-txt text-center">
 
 										<!-- Title -->	
-										<h2 class="s-50 w-700">Starting with Martex is easy, fast and free</h2>
+										<h2 class="s-50 w-700">Starting with ProCraftLabs is easy, fast and free</h2>
 
 										<!-- Buttons -->
 										<div class="btns-group">
@@ -2287,7 +2287,7 @@
 							<!-- FOOTER COPYRIGHT -->
 							<div class="col">
 								<div class="footer-copyright">
-									<p class="p-sm">&copy; 2023 Martex. <span>All Rights Reserved</span></p>
+									<p class="p-sm">&copy; 2023 ProCraftLabs. <span>All Rights Reserved</span></p>
 								</div>
 							</div>
 
