--- a/src/team.html
+++ b/src/team.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<!-- Martex - Software, App, SaaS & Startup Landing Pages Pack design by DSAThemes (http://www.dsathemes.com) -->
+<!-- ProCraftLabs - Software, App, SaaS & Startup Landing Pages Pack design by DSAThemes (http://www.dsathemes.com) -->
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
@@ -14,12 +14,12 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="author" content="DSAThemes">	
-		<meta name="description" content="Martex - Software, App, SaaS & Startup Landing Pages Pack">
+		<meta name="description" content="ProCraftLabs - Software, App, SaaS & Startup Landing Pages Pack">
 		<meta name="keywords" content="Responsive, HTML5, DSAThemes, Landing, Software, Mobile App, SaaS, Startup, Creative, Digital Product">	
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 				
   		<!-- SITE TITLE -->
-		<title>Martex - Software, App, SaaS & Startup Landing Pages Pack</title>
+		<title>ProCraftLabs - Software, App, SaaS & Startup Landing Pages Pack</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -642,7 +642,7 @@
 							<div class="section-title mb-70">	
 
 								<!-- Title -->	
-								<h2 class="s-52 w-700">Open Roles at Martex</h2>	
+								<h2 class="s-52 w-700">Open Roles at ProCraftLabs</h2>	
 
 								<!-- Text -->	
 								<p class="p-lg">We’re building a better way to work, fueled by transparency, trust, and 
@@ -759,7 +759,7 @@
 										<h2 class="s-46 w-700">We can't wait to meet you</h2>
 
 										<!-- Button -->
-										<a href="mailto:yourdomain@mail.com" class="btn r-04 btn--theme hover--theme">hello@yourdomain.com</a>
+										<a href="mailto:yourdomain@mail.com" class="btn r-04 btn--theme hover--theme">info@procraftlabs.com</a>
 
 									</div>
 								</div>
@@ -866,7 +866,7 @@
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:yourdomain@mail.com">hello@yourdomain.com</a>
+									<a href="mailto:yourdomain@mail.com">info@procraftlabs.com</a>
 								</p>
 
 								<!-- Social Links -->	
@@ -894,7 +894,7 @@
 
 							<!-- FOOTER COPYRIGHT -->
 							<div class="col">
-								<div class="footer-copyright"><p class="p-sm">&copy; 2023 Martex. <span>All Rights Reserved</span></p></div>
+								<div class="footer-copyright"><p class="p-sm">&copy; 2023 ProCraftLabs. <span>All Rights Reserved</span></p></div>
 							</div>
 
 
