--- a/src/careers.html
+++ b/src/careers.html
@@ -807,7 +807,7 @@
 										</p>
 
 										<!-- Button -->
-										<a href="mailto:yourdomain@mail.com" class="btn r-04 btn--theme hover--tra-white">yourdomain@mail.com</a>
+										<a href="mailto:info@ProCraftLabs.com" class="btn r-04 btn--theme hover--tra-white">info@ProCraftLabs.com</a>
 
 									</div>
 								</div>	<!-- END BANNER-12 TEXT -->
@@ -973,7 +973,7 @@
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:yourdomain@mail.com">info@procraftlabs.com</a>
+									<a href="mailto:info@ProCraftLabs.com">info@procraftlabs.com</a>
 								</p>
 
 								<!-- Social Links -->	
@@ -1001,7 +1001,7 @@
 
 							<!-- FOOTER COPYRIGHT -->
 							<div class="col">
-								<div class="footer-copyright"><p class="p-sm">&copy; 2023 ProCraftLabs. <span>All Rights Reserved</span></p></div>
+								<div class="footer-copyright"><p class="p-sm">&copy; 2024 ProCraftLabs. <span>All Rights Reserved</span></p></div>
 							</div>
 
 
