--- a/src/download.html
+++ b/src/download.html
@@ -196,7 +196,7 @@
 									<!-- Version Data -->
 									<div class="rel">
 										<span class="version-data">4.13.019</span>
-										<span class="release-date">2023-05-31 <span>68.91 MB</span></span>
+										<span class="release-date">2024-05-31 <span>68.91 MB</span></span>
 										<a href="download/example.zip" download="example.zip" class="btn btn--theme hover--tra-grey ico-20 ico-left release-download">
 											<span class="flaticon-down-arrow-1"></span> Download 4.13.019
 										</a>
@@ -229,7 +229,7 @@
 									<!-- Version Data -->
 									<div class="rel">
 										<span class="version-data">4.11.020</span>
-										<span class="release-date">2023-05-18 <span>62.46 MB</span></span>
+										<span class="release-date">2024-05-18 <span>62.46 MB</span></span>
 										<a href="download/example.zip" download="example.zip" class="btn btn--tra-grey hover--theme ico-20 ico-left release-download">
 											<span class="flaticon-down-arrow-1"></span> Download 4.11.020
 										</a>
@@ -270,7 +270,7 @@
 									<!-- Version Data -->
 									<div class="rel">
 										<span class="version-data">4.08.106</span>
-										<span class="release-date">2023-04-12 <span>58.83 MB</span></span>
+										<span class="release-date">2024-04-12 <span>58.83 MB</span></span>
 										<a href="download/example.zip" download="example.zip" class="btn btn--tra-grey hover--theme ico-20 ico-left release-download">
 											<span class="flaticon-down-arrow-1"></span> Download 4.08.106
 										</a>
@@ -324,7 +324,7 @@
 									<!-- Version Data -->
 									<div class="rel">
 										<span class="version-data">4.0.018</span>
-										<span class="release-date">2023-02-26 <span>64.95 MB</span></span>
+										<span class="release-date">2024-02-26 <span>64.95 MB</span></span>
 										<a href="download/example.zip" download="example.zip" class="btn btn--tra-grey hover--theme ico-20 ico-left release-download">
 											<span class="flaticon-down-arrow-1"></span> Download 4.0.018
 										</a>
@@ -598,7 +598,7 @@
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:yourdomain@mail.com">info@procraftlabs.com</a>
+									<a href="mailto:info@ProCraftLabs.com">info@procraftlabs.com</a>
 								</p>
 
 								<!-- Social Links -->	
@@ -626,7 +626,7 @@
 
 							<!-- FOOTER COPYRIGHT -->
 							<div class="col">
-								<div class="footer-copyright"><p class="p-sm">&copy; 2023 ProCraftLabs. <span>All Rights Reserved</span></p></div>
+								<div class="footer-copyright"><p class="p-sm">&copy; 2024 ProCraftLabs. <span>All Rights Reserved</span></p></div>
 							</div>
 
 
