--- a/src/project-details.html
+++ b/src/project-details.html
@@ -204,11 +204,11 @@
 											</div>
 
 											<div class="col">
-												<p class="p-lg"><span>Start Date:</span> 2023-02-28</p>
+												<p class="p-lg"><span>Start Date:</span> 2024-02-28</p>
 											</div>
 
 											<div class="col">
-												<p class="p-lg"><span>Handover:</span> 2023-04-30</p>
+												<p class="p-lg"><span>Handover:</span> 2024-04-30</p>
 											</div>
 
 											<div class="col">
@@ -692,7 +692,7 @@
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:yourdomain@mail.com">info@procraftlabs.com</a>
+									<a href="mailto:info@ProCraftLabs.com">info@procraftlabs.com</a>
 								</p>
 
 								<!-- Social Links -->	
@@ -720,7 +720,7 @@
 
 							<!-- FOOTER COPYRIGHT -->
 							<div class="col">
-								<div class="footer-copyright"><p class="p-sm">&copy; 2023 ProCraftLabs. <span>All Rights Reserved</span></p></div>
+								<div class="footer-copyright"><p class="p-sm">&copy; 2024 ProCraftLabs. <span>All Rights Reserved</span></p></div>
 							</div>
 
 
