--- a/src/blog-listing.html
+++ b/src/blog-listing.html
@@ -220,7 +220,7 @@
 										<ul class="post-meta-list ico-10">
 											<li><p class="w-500">By ProCraftLabs Team</p></li>
 											<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
-											<li><p>Apr 28, 2023</p></li>
+											<li><p>Apr 28, 2024</p></li>
 										</ul>
 									</div>
 
@@ -271,7 +271,7 @@
 											<ul class="post-meta-list ico-10">
 												<li><p class="p-sm w-500">By ProCraftLabs Team</p></li>
 												<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
-												<li><p class="p-sm">Apr 23, 2023</p></li>
+												<li><p class="p-sm">Apr 23, 2024</p></li>
 											</ul>
 										</div>
 
@@ -314,7 +314,7 @@
 											<ul class="post-meta-list ico-10">
 												<li><p class="p-sm w-500">By Miranda Green</p></li>
 												<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
-												<li><p class="p-sm">Apr 09, 2023</p></li>
+												<li><p class="p-sm">Apr 09, 2024</p></li>
 											</ul>
 										</div>
 
@@ -357,7 +357,7 @@
 											<ul class="post-meta-list ico-10">
 												<li><p class="p-sm w-500">By Helen J.</p></li>
 												<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
-												<li><p class="p-sm">Apr 01, 2023</p></li>
+												<li><p class="p-sm">Apr 01, 2024</p></li>
 											</ul>
 										</div>
 
@@ -419,7 +419,7 @@
 											<ul class="post-meta-list ico-10">
 												<li><p class="p-sm w-500">By Miranda Green</p></li>
 												<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
-												<li><p class="p-sm">Mar 20, 2023</p></li>
+												<li><p class="p-sm">Mar 20, 2024</p></li>
 											</ul>
 										</div>
 
@@ -464,7 +464,7 @@
 											<ul class="post-meta-list ico-10">
 												<li><p class="p-sm w-500">By ProCraftLabs Team</p></li>
 												<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
-												<li><p class="p-sm">Mar 13, 2023</p></li>
+												<li><p class="p-sm">Mar 13, 2024</p></li>
 											</ul>
 										</div>
 
@@ -507,7 +507,7 @@
 											<ul class="post-meta-list ico-10">
 												<li><p class="p-sm w-500">By ProCraftLabs Team</p></li>
 												<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
-												<li><p class="p-sm">Feb 23, 2023</p></li>
+												<li><p class="p-sm">Feb 23, 2024</p></li>
 											</ul>
 										</div>
 
@@ -557,7 +557,7 @@
 													<ul class="post-meta-list ico-10">
 														<li><p class="w-500">By ProCraftLabs Team</p></li>
 														<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
-														<li><p>Feb 12, 2023</p></li>
+														<li><p>Feb 12, 2024</p></li>
 													</ul>
 												</div>
 
@@ -641,7 +641,7 @@
 											<ul class="post-meta-list ico-10">
 												<li><p class="p-sm w-500">By ProCraftLabs Team</p></li>
 												<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
-												<li><p class="p-sm">Feb 02, 2023</p></li>
+												<li><p class="p-sm">Feb 02, 2024</p></li>
 											</ul>
 										</div>
 
@@ -684,7 +684,7 @@
 											<ul class="post-meta-list ico-10">
 												<li><p class="p-sm w-500">By Miranda Green</p></li>
 												<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
-												<li><p class="p-sm">Jan 26, 2023</p></li>
+												<li><p class="p-sm">Jan 26, 2024</p></li>
 											</ul>
 										</div>
 
@@ -729,7 +729,7 @@
 											<ul class="post-meta-list ico-10">
 												<li><p class="p-sm w-500">By Miranda Green</p></li>
 												<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
-												<li><p class="p-sm">Jan 12, 2023</p></li>
+												<li><p class="p-sm">Jan 12, 2024</p></li>
 											</ul>
 										</div>
 
@@ -912,7 +912,7 @@
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:yourdomain@mail.com">info@procraftlabs.com</a>
+									<a href="mailto:info@ProCraftLabs.com">info@procraftlabs.com</a>
 								</p>
 
 								<!-- Social Links -->	
@@ -940,7 +940,7 @@
 
 							<!-- FOOTER COPYRIGHT -->
 							<div class="col">
-								<div class="footer-copyright"><p class="p-sm">&copy; 2023 ProCraftLabs. <span>All Rights Reserved</span></p></div>
+								<div class="footer-copyright"><p class="p-sm">&copy; 2024 ProCraftLabs. <span>All Rights Reserved</span></p></div>
 							</div>
 
 
