--- a/src/demo-12.html
+++ b/src/demo-12.html
@@ -1950,7 +1950,7 @@
 										<ul class="post-meta-list ico-10">
 											<li><p class="p-sm w-500">By Helen J.</p></li>
 											<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
-											<li><p class="p-sm">Apr 28, 2023</p></li>
+											<li><p class="p-sm">Apr 28, 2024</p></li>
 										</ul>
 									</div>
 
@@ -1990,7 +1990,7 @@
 										<ul class="post-meta-list ico-10">
 											<li><p class="p-sm w-500">By ProCraftLabs Team</p></li>
 											<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
-											<li><p class="p-sm">Apr 14, 2023</p></li>
+											<li><p class="p-sm">Apr 14, 2024</p></li>
 										</ul>
 									</div>
 
@@ -2030,7 +2030,7 @@
 										<ul class="post-meta-list ico-10">
 											<li><p class="p-sm w-500">By Miranda Green</p></li>
 											<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
-											<li><p class="p-sm">Mar 27, 2023</p></li>
+											<li><p class="p-sm">Mar 27, 2024</p></li>
 										</ul>
 									</div>
 
@@ -2286,7 +2286,7 @@
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:yourdomain@mail.com">info@procraftlabs.com</a>
+									<a href="mailto:info@ProCraftLabs.com">info@procraftlabs.com</a>
 								</p>
 
 								<!-- Social Links -->	
@@ -2314,7 +2314,7 @@
 
 							<!-- FOOTER COPYRIGHT -->
 							<div class="col">
-								<div class="footer-copyright"><p class="p-sm">&copy; 2023 ProCraftLabs. <span>All Rights Reserved</span></p></div>
+								<div class="footer-copyright"><p class="p-sm">&copy; 2024 ProCraftLabs. <span>All Rights Reserved</span></p></div>
 							</div>
 
 
