--- a/src/demo-16.html
+++ b/src/demo-16.html
@@ -1876,7 +1876,7 @@
 										<ul class="post-meta-list ico-10">
 											<li><p class="p-sm w-500">By Helen J.</p></li>
 											<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
-											<li><p class="p-sm">Apr 28, 2023</p></li>
+											<li><p class="p-sm">Apr 28, 2024</p></li>
 										</ul>
 									</div>
 
@@ -1916,7 +1916,7 @@
 										<ul class="post-meta-list ico-10">
 											<li><p class="p-sm w-500">By ProCraftLabs Team</p></li>
 											<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
-											<li><p class="p-sm">Apr 14, 2023</p></li>
+											<li><p class="p-sm">Apr 14, 2024</p></li>
 										</ul>
 									</div>
 
@@ -1956,7 +1956,7 @@
 										<ul class="post-meta-list ico-10">
 											<li><p class="p-sm w-500">By Miranda Green</p></li>
 											<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
-											<li><p class="p-sm">Mar 27, 2023</p></li>
+											<li><p class="p-sm">Mar 27, 2024</p></li>
 										</ul>
 									</div>
 
@@ -2192,7 +2192,7 @@
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:yourdomain@mail.com">info@procraftlabs.com</a>
+									<a href="mailto:info@ProCraftLabs.com">info@procraftlabs.com</a>
 								</p>
 
 								<!-- Social Links -->	
@@ -2220,7 +2220,7 @@
 
 							<!-- FOOTER COPYRIGHT -->
 							<div class="col">
-								<div class="footer-copyright"><p class="p-sm">&copy; 2023 ProCraftLabs. <span>All Rights Reserved</span></p></div>
+								<div class="footer-copyright"><p class="p-sm">&copy; 2024 ProCraftLabs. <span>All Rights Reserved</span></p></div>
 							</div>
 
 
