--- a/src/demo-17.html
+++ b/src/demo-17.html
@@ -2062,7 +2062,7 @@
 										<ul class="post-meta-list ico-10">
 											<li><p class="p-sm w-500">By Helen J.</p></li>
 											<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
-											<li><p class="p-sm">Apr 28, 2023</p></li>
+											<li><p class="p-sm">Apr 28, 2024</p></li>
 										</ul>
 									</div>
 
@@ -2102,7 +2102,7 @@
 										<ul class="post-meta-list ico-10">
 											<li><p class="p-sm w-500">By ProCraftLabs Team</p></li>
 											<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
-											<li><p class="p-sm">Apr 14, 2023</p></li>
+											<li><p class="p-sm">Apr 14, 2024</p></li>
 										</ul>
 									</div>
 
@@ -2142,7 +2142,7 @@
 										<ul class="post-meta-list ico-10">
 											<li><p class="p-sm w-500">By Miranda Green</p></li>
 											<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
-											<li><p class="p-sm">Mar 27, 2023</p></li>
+											<li><p class="p-sm">Mar 27, 2024</p></li>
 										</ul>
 									</div>
 
@@ -2291,7 +2291,7 @@
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:yourdomain@mail.com">info@procraftlabs.com</a>
+									<a href="mailto:info@ProCraftLabs.com">info@procraftlabs.com</a>
 								</p>
 
 								<!-- Social Links -->	
@@ -2319,7 +2319,7 @@
 
 							<!-- FOOTER COPYRIGHT -->
 							<div class="col">
-								<div class="footer-copyright"><p class="p-sm">&copy; 2023 ProCraftLabs. <span>All Rights Reserved</span></p></div>
+								<div class="footer-copyright"><p class="p-sm">&copy; 2024 ProCraftLabs. <span>All Rights Reserved</span></p></div>
 							</div>
 
 
