--- a/src/team.html
+++ b/src/team.html
@@ -759,7 +759,7 @@
 										<h2 class="s-46 w-700">We can't wait to meet you</h2>
 
 										<!-- Button -->
-										<a href="mailto:yourdomain@mail.com" class="btn r-04 btn--theme hover--theme">info@procraftlabs.com</a>
+										<a href="mailto:info@ProCraftLabs.com" class="btn r-04 btn--theme hover--theme">info@procraftlabs.com</a>
 
 									</div>
 								</div>
@@ -866,7 +866,7 @@
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:yourdomain@mail.com">info@procraftlabs.com</a>
+									<a href="mailto:info@ProCraftLabs.com">info@procraftlabs.com</a>
 								</p>
 
 								<!-- Social Links -->	
@@ -894,7 +894,7 @@
 
 							<!-- FOOTER COPYRIGHT -->
 							<div class="col">
-								<div class="footer-copyright"><p class="p-sm">&copy; 2023 ProCraftLabs. <span>All Rights Reserved</span></p></div>
+								<div class="footer-copyright"><p class="p-sm">&copy; 2024 ProCraftLabs. <span>All Rights Reserved</span></p></div>
 							</div>
 
 
