--- a/src/terms.html
+++ b/src/terms.html
@@ -413,7 +413,7 @@
 
 								<!-- Text -->  
 								<p>If you have any questions or suggestions about this Terms of Service, do not hesitate to 
-									contact us at <a href="mailto:yourdomain@mail.com" class="color--theme">info@procraftlabs.com</a>
+									contact us at <a href="mailto:info@ProCraftLabs.com" class="color--theme">info@procraftlabs.com</a>
 								</p>
 
 
