--- a/src/demo-20.html
+++ b/src/demo-20.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<!-- ProCraftLabs - Build, test & scale your product ideas design by DSAThemes (http://www.dsathemes.com) -->
+<!-- proofcraftlabs - Build, test & scale your product ideas design by DSAThemes (http://www.dsathemes.com) -->
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
@@ -14,12 +14,12 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="author" content="DSAThemes">	
-		<meta name="description" content="ProCraftLabs - Build, test & scale your product ideas">
+		<meta name="description" content="proofcraftlabs - Build, test & scale your product ideas">
 		<meta name="keywords" content="Responsive, HTML5, DSAThemes, Landing, Software, Mobile App, SaaS, Startup, Creative, Digital Product">	
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 				
   		<!-- SITE TITLE -->
-		<title>ProCraftLabs - Build, test & scale your product ideas</title>
+		<title>proofcraftlabs - Build, test & scale your product ideas</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -130,7 +130,7 @@
 	        						<!-- DROPDOWN SUB MENU -->
 						          	<li aria-haspopup="true"><a href="#" class="h-link">About <span class="wsarrow"></span></a>
 	            						<ul class="sub-menu">
-	            							<li aria-haspopup="true"><a href="#lnk-1">Why ProCraftLabs?</a></li>
+	            							<li aria-haspopup="true"><a href="#lnk-1">Why proofcraftlabs?</a></li>
 	            							<li aria-haspopup="true"><a href="#lnk-2">How It Works</a></li>
 	            							<li aria-haspopup="true"><a href="#features-2">Best Solutions</a></li>
 	            							<li aria-haspopup="true"><a href="#integrations-1">Integrations</a></li>
@@ -2077,7 +2077,7 @@
 									<!-- Post Meta -->
 									<div class="blog-post-meta mt-20">
 										<ul class="post-meta-list ico-10">
-											<li><p class="p-sm w-500">By ProCraftLabs Team</p></li>
+											<li><p class="p-sm w-500">By proofcraftlabs Team</p></li>
 											<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
 											<li><p class="p-sm">Apr 14, 2024</p></li>
 										</ul>
@@ -2106,7 +2106,7 @@
 
 									<!-- Post Link -->
 									<h6 class="s-20 w-700">
-										<a href="single-post.html">Cubilia laoreet augue egestas and ProCraftLabs magna impedit</a>
+										<a href="single-post.html">Cubilia laoreet augue egestas and proofcraftlabs magna impedit</a>
 									</h6>
 
 									<!-- Text -->
@@ -2153,7 +2153,7 @@
 									<div class="banner-3-txt color--white">
 
 										<!-- Title -->	
-										<h2 class="s-48 w-700">Starting with ProCraftLabs is easy, fast and free</h2>
+										<h2 class="s-48 w-700">Starting with proofcraftlabs is easy, fast and free</h2>
 
 										<!-- Text -->
 										<p class="p-xl">It only takes a few clicks to get started</p>
@@ -2402,7 +2402,7 @@
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:info@ProCraftLabs.com">info@procraftlabs.com</a>
+									<a href="mailto:info@proofcraftlabs.com">info@proofcraftlabs.com</a>
 								</p>
 
 								<!-- Social Links -->	
@@ -2430,7 +2430,7 @@
 
 							<!-- FOOTER COPYRIGHT -->
 							<div class="col">
-								<div class="footer-copyright"><p class="p-sm">&copy; 2024 ProCraftLabs. <span>All Rights Reserved</span></p></div>
+								<div class="footer-copyright"><p class="p-sm">&copy; 2024 proofcraftlabs. <span>All Rights Reserved</span></p></div>
 							</div>
 
 
