--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- ProCraftLabs - Build, test & scale your product ideas design by DSAThemes (http://www.dsathemes.com) -->
+<!-- proofcraftlabs - Build, test & scale your product ideas design by DSAThemes (http://www.dsathemes.com) -->
 <!--[if lt IE 7]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8]><html class="ie ie8" lang="en"> <![endif]-->
@@ -11,7 +11,7 @@
     <meta name="author" content="DSAThemes" />
     <meta
       name="description"
-      content="ProCraftLabs - Build, test & scale your product ideas"
+      content="proofcraftlabs - Build, test & scale your product ideas"
     />
     <meta
       name="keywords"
@@ -21,7 +21,7 @@
 
     <!-- SITE TITLE -->
     <title>
-      ProCraftLabs - Build, test & scale your product ideas
+      proofcraftlabs - Build, test & scale your product ideas
     </title>
 
     <!-- FAVICON AND TOUCH ICONS -->
@@ -148,7 +148,7 @@
                     ></a>
                     <ul class="sub-menu">
                       <li aria-haspopup="true">
-                        <a href="#lnk-1">Why ProCraftLabs?</a>
+                        <a href="#lnk-1">Why proofcraftlabs?</a>
                       </li>
                       <li aria-haspopup="true">
                         <a href="#lnk-2">How It Works</a>
@@ -1600,7 +1600,7 @@
 
                 <!-- Title -->
                 <h2 class="s-50 w-700">
-                  Discover insights across all your data with ProCraftLabs
+                  Discover insights across all your data with proofcraftlabs
                 </h2>
 
                 <!-- Text -->
@@ -2563,8 +2563,8 @@
 
                 <!-- Mail Link -->
                 <p class="footer-mail-link ico-25">
-                  <a href="mailto:info@ProCraftLabs.com"
-                    >info@procraftlabs.com</a
+                  <a href="mailto:info@proofcraftlabs.com"
+                    >info@proofcraftlabs.com</a
                   >
                 </p>
 
@@ -2599,7 +2599,7 @@
               <div class="col">
                 <div class="footer-copyright">
                   <p class="p-sm">
-                    &copy; 2024 ProCraftLabs. <span>All Rights Reserved</span>
+                    &copy; 2024 proofcraftlabs. <span>All Rights Reserved</span>
                   </p>
                 </div>
               </div>
