--- a/src/blog-listing.html
+++ b/src/blog-listing.html
@@ -1,5 +1,5 @@
 	<!doctype html>
-<!-- ProCraftLabs - Build, test & scale your product ideas design by DSAThemes (http://www.dsathemes.com) -->
+<!-- proofcraftlabs - Build, test & scale your product ideas design by DSAThemes (http://www.dsathemes.com) -->
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
@@ -14,12 +14,12 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="author" content="DSAThemes">	
-		<meta name="description" content="ProCraftLabs - Build, test & scale your product ideas">
+		<meta name="description" content="proofcraftlabs - Build, test & scale your product ideas">
 		<meta name="keywords" content="Responsive, HTML5, DSAThemes, Landing, Software, Mobile App, SaaS, Startup, Creative, Digital Product">	
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 				
   		<!-- SITE TITLE -->
-		<title>ProCraftLabs - Build, test & scale your product ideas</title>
+		<title>proofcraftlabs - Build, test & scale your product ideas</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -205,7 +205,7 @@
 
 									<!-- Post Link -->
 									<h3 class="s-38 w-700">
-										<a href="single-post.html">Congue magna tempor and ipsum ProCraftLabs sapien turpis 
+										<a href="single-post.html">Congue magna tempor and ipsum proofcraftlabs sapien turpis 
 										   laoreet augue
 										</a>
 									</h3>
@@ -218,7 +218,7 @@
 									<!-- Post Meta -->
 									<div class="blog-post-meta mt-30">
 										<ul class="post-meta-list ico-10">
-											<li><p class="w-500">By ProCraftLabs Team</p></li>
+											<li><p class="w-500">By proofcraftlabs Team</p></li>
 											<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
 											<li><p>Apr 28, 2024</p></li>
 										</ul>
@@ -269,7 +269,7 @@
 										<!-- Post Meta -->
 										<div class="blog-post-meta mt-20">
 											<ul class="post-meta-list ico-10">
-												<li><p class="p-sm w-500">By ProCraftLabs Team</p></li>
+												<li><p class="p-sm w-500">By proofcraftlabs Team</p></li>
 												<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
 												<li><p class="p-sm">Apr 23, 2024</p></li>
 											</ul>
@@ -344,7 +344,7 @@
 
 										<!-- Post Link -->
 										<h6 class="s-20 w-700">
-											<a href="single-post.html">Cubilia laoreet ipsum augue eget egestas ProCraftLabs magna</a>
+											<a href="single-post.html">Cubilia laoreet ipsum augue eget egestas proofcraftlabs magna</a>
 										</h6>
 
 										<!-- Text -->
@@ -462,7 +462,7 @@
 										<!-- Post Meta -->
 										<div class="blog-post-meta mt-20">
 											<ul class="post-meta-list ico-10">
-												<li><p class="p-sm w-500">By ProCraftLabs Team</p></li>
+												<li><p class="p-sm w-500">By proofcraftlabs Team</p></li>
 												<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
 												<li><p class="p-sm">Mar 13, 2024</p></li>
 											</ul>
@@ -505,7 +505,7 @@
 										<!-- Post Meta -->
 										<div class="blog-post-meta mt-20">
 											<ul class="post-meta-list ico-10">
-												<li><p class="p-sm w-500">By ProCraftLabs Team</p></li>
+												<li><p class="p-sm w-500">By proofcraftlabs Team</p></li>
 												<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
 												<li><p class="p-sm">Feb 23, 2024</p></li>
 											</ul>
@@ -542,7 +542,7 @@
 
 												<!-- Post Link -->
 												<h4 class="s-34 w-700 mb-20">
-													<a href="single-post.html">Lipsum sodales sapien ProCraftLabs aliquet blandit 
+													<a href="single-post.html">Lipsum sodales sapien proofcraftlabs aliquet blandit 
 													   augue gravida posuere
 													</a>
 												</h4>
@@ -555,7 +555,7 @@
 												<!-- Post Meta -->
 												<div class="blog-post-meta mt-30">
 													<ul class="post-meta-list ico-10">
-														<li><p class="w-500">By ProCraftLabs Team</p></li>
+														<li><p class="w-500">By proofcraftlabs Team</p></li>
 														<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
 														<li><p>Feb 12, 2024</p></li>
 													</ul>
@@ -639,7 +639,7 @@
 										<!-- Post Meta -->
 										<div class="blog-post-meta mt-20">
 											<ul class="post-meta-list ico-10">
-												<li><p class="p-sm w-500">By ProCraftLabs Team</p></li>
+												<li><p class="p-sm w-500">By proofcraftlabs Team</p></li>
 												<li class="meta-list-divider"><p><span class="flaticon-minus"></span></p></li>
 												<li><p class="p-sm">Feb 02, 2024</p></li>
 											</ul>
@@ -912,7 +912,7 @@
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:info@ProCraftLabs.com">info@procraftlabs.com</a>
+									<a href="mailto:info@proofcraftlabs.com">info@proofcraftlabs.com</a>
 								</p>
 
 								<!-- Social Links -->	
@@ -940,7 +940,7 @@
 
 							<!-- FOOTER COPYRIGHT -->
 							<div class="col">
-								<div class="footer-copyright"><p class="p-sm">&copy; 2024 ProCraftLabs. <span>All Rights Reserved</span></p></div>
+								<div class="footer-copyright"><p class="p-sm">&copy; 2024 proofcraftlabs. <span>All Rights Reserved</span></p></div>
 							</div>
 
 
