--- a/src/demo-7.html
+++ b/src/demo-7.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<!-- ProCraftLabs - Build, test & scale your product ideas design by DSAThemes (http://www.dsathemes.com) -->
+<!-- proofcraftlabs - Build, test & scale your product ideas design by DSAThemes (http://www.dsathemes.com) -->
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
@@ -14,12 +14,12 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="author" content="DSAThemes">	
-		<meta name="description" content="ProCraftLabs - Build, test & scale your product ideas">
+		<meta name="description" content="proofcraftlabs - Build, test & scale your product ideas">
 		<meta name="keywords" content="Responsive, HTML5, DSAThemes, Landing, Software, Mobile App, SaaS, Startup, Creative, Digital Product">	
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 				
   		<!-- SITE TITLE -->
-		<title>ProCraftLabs - Build, test & scale your product ideas</title>
+		<title>proofcraftlabs - Build, test & scale your product ideas</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -130,7 +130,7 @@
 	        						<!-- DROPDOWN SUB MENU -->
 						          	<li aria-haspopup="true"><a href="#" class="h-link">About <span class="wsarrow"></span></a>
 	            						<ul class="sub-menu">
-	            							<li aria-haspopup="true"><a href="#lnk-1">Why ProCraftLabs?</a></li>
+	            							<li aria-haspopup="true"><a href="#lnk-1">Why proofcraftlabs?</a></li>
 	            							<li aria-haspopup="true"><a href="#features-2">Best Solutions</a></li>
 	            							<li aria-haspopup="true"><a href="#lnk-2">Integrations</a></li>
 	            							<li aria-haspopup="true"><a href="#lnk-3">How It Works</a></li>
@@ -1490,7 +1490,7 @@
 							<div class="section-title mb-70">	
 
 								<!-- Title -->	
-								<h2 class="s-50 w-700">Discover insights across all your data with ProCraftLabs</h2>	
+								<h2 class="s-50 w-700">Discover insights across all your data with proofcraftlabs</h2>	
 
 								<!-- Text -->	
 								<p class="s-21">Ligula risus auctor tempus magna feugiat lacinia.</p>
@@ -1783,7 +1783,7 @@
 									<div class="question mb-35 wow fadeInUp">
 
 										<!-- Question -->
-										<h5 class="s-22 w-700"><span>1.</span> Getting started with ProCraftLabs</h5>
+										<h5 class="s-22 w-700"><span>1.</span> Getting started with proofcraftlabs</h5>
 
 										<!-- Answer -->
 										<p class="color--grey">Etiam amet mauris suscipit in odio integer congue metus 
@@ -1848,7 +1848,7 @@
 									<div class="question mb-35 wow fadeInUp">
 
 										<!-- Question -->
-										<h5 class="s-22 w-700"><span>4.</span> How does ProCraftLabs handle my privacy?</h5>
+										<h5 class="s-22 w-700"><span>4.</span> How does proofcraftlabs handle my privacy?</h5>
 
 										<!-- Answer -->
 										<p class="color--grey">Quaerat sodales sapien euismod blandit purus a purus 
@@ -2118,7 +2118,7 @@
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:info@ProCraftLabs.com">info@procraftlabs.com</a>
+									<a href="mailto:info@proofcraftlabs.com">info@proofcraftlabs.com</a>
 								</p>
 
 								<!-- Social Links -->	
@@ -2146,7 +2146,7 @@
 
 							<!-- FOOTER COPYRIGHT -->
 							<div class="col">
-								<div class="footer-copyright"><p class="p-sm">&copy; 2024 ProCraftLabs. <span>All Rights Reserved</span></p></div>
+								<div class="footer-copyright"><p class="p-sm">&copy; 2024 proofcraftlabs. <span>All Rights Reserved</span></p></div>
 							</div>
 
 
