--- a/src/help-center.html
+++ b/src/help-center.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<!-- ProCraftLabs - Build, test & scale your product ideas design by DSAThemes (http://www.dsathemes.com) -->
+<!-- proofcraftlabs - Build, test & scale your product ideas design by DSAThemes (http://www.dsathemes.com) -->
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
@@ -14,12 +14,12 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="author" content="DSAThemes">	
-		<meta name="description" content="ProCraftLabs - Build, test & scale your product ideas">
+		<meta name="description" content="proofcraftlabs - Build, test & scale your product ideas">
 		<meta name="keywords" content="Responsive, HTML5, DSAThemes, Landing, Software, Mobile App, SaaS, Startup, Creative, Digital Product">	
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 				
   		<!-- SITE TITLE -->
-		<title>ProCraftLabs - Build, test & scale your product ideas</title>
+		<title>proofcraftlabs - Build, test & scale your product ideas</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -245,7 +245,7 @@
 
 												<!-- Question -->
 												<div class="accordion-thumb">
-													<h5 class="s-22 w-700">What is ProCraftLabs and how does it work?</h5>
+													<h5 class="s-22 w-700">What is proofcraftlabs and how does it work?</h5>
 												</div>
 
 												<!-- Answer -->
@@ -331,7 +331,7 @@
 
 												<!-- Question -->
 												<div class="accordion-thumb">
-													<h5 class="s-22 w-700">Which languages does ProCraftLabs support?</h5>
+													<h5 class="s-22 w-700">Which languages does proofcraftlabs support?</h5>
 												</div>
 
 												<!-- Answer -->
@@ -571,7 +571,7 @@
 
 												<!-- Question -->
 												<div class="accordion-thumb">
-													<h5 class="s-22 w-700">How much does ProCraftLabs cost?</h5>
+													<h5 class="s-22 w-700">How much does proofcraftlabs cost?</h5>
 												</div>
 
 												<!-- Answer -->
@@ -1031,7 +1031,7 @@
 
 								<!-- Mail Link -->
 								<p class="footer-mail-link ico-25">
-									<a href="mailto:info@ProCraftLabs.com">info@procraftlabs.com</a>
+									<a href="mailto:info@proofcraftlabs.com">info@proofcraftlabs.com</a>
 								</p>
 
 								<!-- Social Links -->	
@@ -1059,7 +1059,7 @@
 
 							<!-- FOOTER COPYRIGHT -->
 							<div class="col">
-								<div class="footer-copyright"><p class="p-sm">&copy; 2024 ProCraftLabs. <span>All Rights Reserved</span></p></div>
+								<div class="footer-copyright"><p class="p-sm">&copy; 2024 proofcraftlabs. <span>All Rights Reserved</span></p></div>
 							</div>
 
 
