--- a/src/integrations.html
+++ b/src/integrations.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<!-- ProCraftLabs - Build, test & scale your product ideas design by DSAThemes (http://www.dsathemes.com) -->
+<!-- proofcraftlabs - Build, test & scale your product ideas design by DSAThemes (http://www.dsathemes.com) -->
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
@@ -14,12 +14,12 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="author" content="DSAThemes">	
-		<meta name="description" content="ProCraftLabs - Build, test & scale your product ideas">
+		<meta name="description" content="proofcraftlabs - Build, test & scale your product ideas">
 		<meta name="keywords" content="Responsive, HTML5, DSAThemes, Landing, Software, Mobile App, SaaS, Startup, Creative, Digital Product">	
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 				
   		<!-- SITE TITLE -->
-		<title>ProCraftLabs - Build, test & scale your product ideas</title>
+		<title>proofcraftlabs - Build, test & scale your product ideas</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -887,7 +887,7 @@
 									<div class="banner-3-txt color--white">
 
 										<!-- Title -->	
-										<h2 class="s-48 w-700">Starting with ProCraftLabs is easy, fast and free</h2>
+										<h2 class="s-48 w-700">Starting with proofcraftlabs is easy, fast and free</h2>
 
 										<!-- Text -->
 										<p class="p-xl">It only takes a few clicks to get started</p>
@@ -1032,7 +1032,7 @@
 							<!-- FOOTER COPYRIGHT -->
 							<div class="col">
 								<div class="footer-copyright">
-									<p class="p-sm">&copy; 2024 ProCraftLabs. <span>All Rights Reserved</span></p>
+									<p class="p-sm">&copy; 2024 proofcraftlabs. <span>All Rights Reserved</span></p>
 								</div>
 							</div>
 
